--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .my-container h1 {
+    @apply font-bold text-3xl;
+  }
+  .my-container h2 {
+    @apply font-bold text-2xl;
+  }
+  .my-container h3 {
+    @apply font-bold text-xl;
+  }
+}
+
 html,
 body {
   padding: 0;
